# sandbox3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate.win64.vs2022.bat  generate_and_run.win64.vs2022.bat  generate_raylib_examples.win64.vs2022.bat  git_clean.bat  main.cpp
src/: imgui_impl_raylib.h  pch.h  physbox.h  sandbox3d.h
src/core/: action.cpp  action.h  components.h  registry.cpp
src/core/camera/: camera_controller.cpp  camera_controller.h
src/core/component/: components.h  light.h
src/core/factory/: factory.cpp  factory.h
src/core/registry/: registry.h
src/core/system/: cleanup.cpp  cleanup.h  input.cpp  input.h  lightning.cpp  lightning.h  physics.cpp  physics.h  render.cpp  render.h  system_base.h
src/core/system/input/: event_dispatcher.cpp  event_dispatcher.h  input.cpp  input.h
src/core/system/physics/: collision.cpp  collision.h  physics.cpp  physics.h
src/core/system/render/: light.cpp  light.h  render.cpp  render.h  text3d.cpp  text3d.h  utils.cpp  utils.h
src/core/system/render/shaders/lights/: geom.fs  geom.vs
src/core/systems/: input_system.cpp  lightning_system.cpp  physics_system.cpp  physics_system.h  render_system.cpp  system_base.h  system_input.cpp  system_input.h  system_lightning.cpp  system_lightning.h  system_physics.cpp  system_render.cpp  system_render.h
src/debug/: debugger.h  debugger_physics.h  debugger_render.h  system_debugger.cpp  system_debugger.h
src/entity/: components.h  systems.cpp  systems.h
src/game_scene/: game_scene.cpp  game_scene.h  phys_manager.cpp  phys_manager.h
src/graphics/: lights.cpp  lights.h  text3d.cpp  text3d.h
src/graphics/light/: components.h  utils.cpp
src/graphics/shaders/lights/: geom.fs
src/scene/: phys_manager.cpp  phys_manager.h  scene_manager.cpp  scene_manager.h  voxel.h
src/utils/: imgui_impl_physbox.cpp  imgui_impl_physbox.h  imgui_impl_sandbox3d.cpp  imgui_impl_sandbox3d.h  imguizmo_impl_sandbox3d.cpp  imguizmo_impl_sandbox3d.h  raylib_cyclone_adapter.cpp  raylib_cyclone_adapter.h  raylib_impl_sandbox3d.cpp  raylib_impl_sandbox3d.h  raylib_utils.cpp  raylib_utils.h  rlights.h
src/utils/graphics/: lights.cpp  lights.h  text3d.cpp  text3d.h
src/utils/shaders/lights/: depth.fs  geom.fs  geom.vs
src/utils/shaders/raylib/: lighting.fs
src/voxels/: voxel.h
utils/: gameobject.h  imgui_impl_physbox.cpp  imgui_impl_physbox.h  raylib_utils.cpp
utils/graphics/: lights.cpp  lights.h
utils/shaders/lights/: geom.fs  shadow.vs
